[gd_scene load_steps=2 format=3 uid="uid://irl7mxsvdmn7"]

[ext_resource type="Script" path="res://script/UI/group_button.gd" id="1_pf1j3"]

[node name="GroupButton" type="ColorRect"]
custom_minimum_size = Vector2(60, 30)
color = Color(0.219608, 0.219608, 0.219608, 1)
script = ExtResource("1_pf1j3")

[node name="lbl_piece_group" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
bbcode_enabled = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
